WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188271
Reading instructionPointer from PlatformRegisters may fail when using pointer profiling
https://bugs.webkit.org/show_bug.cgi?id=188271
Summary
Reading instructionPointer from PlatformRegisters may fail when using pointer...
Saam Barati
Reported
2018-08-02 12:29:15 PDT
...
Attachments
patch
(13.31 KB, patch)
2018-08-02 13:05 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2018-08-02 12:29:45 PDT
<
rdar://problem/42850884
>
Saam Barati
Comment 2
2018-08-02 13:05:42 PDT
Created
attachment 346410
[details]
patch
EWS Watchlist
Comment 3
2018-08-02 13:09:48 PDT
Attachment 346410
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/tools/SigillCrashAnalyzer.cpp:161: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Saboff
Comment 4
2018-08-02 16:45:41 PDT
Comment on
attachment 346410
[details]
patch r=me
WebKit Commit Bot
Comment 5
2018-08-02 17:14:17 PDT
Comment on
attachment 346410
[details]
patch Clearing flags on attachment: 346410 Committed
r234528
: <
https://trac.webkit.org/changeset/234528
>
WebKit Commit Bot
Comment 6
2018-08-02 17:14:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug