Source/JavaScriptCore: Reading instructionPointer from PlatformRegisters may fail when using pointer profiling https://bugs.webkit.org/show_bug.cgi?id=188271 <rdar://problem/42850884>

Reviewed by Michael Saboff.

This patch defends against the instructionPointer containing garbage bits.
See radar for details.

* runtime/MachineContext.h:
(JSC::MachineContext::instructionPointer):
* runtime/SamplingProfiler.cpp:
(JSC::SamplingProfiler::takeSample):
* runtime/VMTraps.cpp:
(JSC::SignalContext::SignalContext):
(JSC::SignalContext::tryCreate):
* tools/CodeProfiling.cpp:
(JSC::profilingTimer):
* tools/SigillCrashAnalyzer.cpp:
(JSC::SignalContext::SignalContext):
(JSC::SignalContext::tryCreate):
(JSC::SignalContext::dump):
(JSC::installCrashHandler):
* wasm/WasmFaultSignalHandler.cpp:
(JSC::Wasm::trapHandler):

Source/WTF:
Reading instructionPointer from PlatformRegisters may fail when using pointer tagging
https://bugs.webkit.org/show_bug.cgi?id=188271
<rdar://problem/42850884>

Reviewed by Michael Saboff.

* wtf/PtrTag.h:
(WTF::isTaggedWith):
(WTF::usesPointerTagging):


Canonical link: https://commits.webkit.org/203392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234528 268f45cc-cd09-0410-ab3c-d52691b4dbfc